--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <body>
         
         <h1>This is a FCS-IT</h1>
-        <p>This is a FCS-IT paragraph.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/2EVFYstVuVk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="https://logodix.com/logo/92164.png">
+        <p>Under construction.</p>
         
     </body>
 </html>
