--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>FCS-IT</title>
-    </head>
-    <body>
+  <head>
+    <meta charset=UTF-8 />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+    <script type="importmap">
+        {
+          "imports": {
+            "three": "https://unpkg.com/three@0.149.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.149.0/examples/jsm/"
+          }
+        }
+    </script>
+    <script type="module">
+      import * as THREE from 'three';
+      let scene, camera, renderer, controls;
+      import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+      import { GLTFLoader } from 'three/addons/loaders/GLTFLoader.js';
+      function init() {
         
-        <h1>This is a FCS-IT</h1>
-        <p>Under construction.</p>
-        
-    </body>
+
+        scene = new THREE.Scene();
+        scene.background = new THREE.Color(0xdddddd);
+
+        camera = new THREE.PerspectiveCamera(40,window.innerWidth/window.innerHeight,1,5000);
+        camera.rotation.y = 45/180*Math.PI;
+        camera.position.x = 200;
+        camera.position.y = 300;
+        camera.position.z = 1000;
+
+        let hlight = new THREE.AmbientLight(0x404040,100);
+        scene.add(hlight);
+
+        let directionalLight = new THREE.DirectionalLight(0xffffff,100);
+        directionalLight.position.set(0,1,0);
+        directionalLight.castShadow = true;
+        scene.add(directionalLight);
+        let light = new THREE.PointLight(0xc4c4c4,10);
+        light.position.set(0,300,500);
+        scene.add(light);
+        let light2 = new THREE.PointLight(0xc4c4c4,10);
+        light2.position.set(500,100,0);
+        scene.add(light2);
+        let light3 = new THREE.PointLight(0xc4c4c4,10);
+        light3.position.set(0,100,-500);
+        scene.add(light3);
+        let light4 = new THREE.PointLight(0xc4c4c4,10);
+        light4.position.set(-500,300,500);
+        scene.add(light4);
+
+        renderer = new THREE.WebGLRenderer({antialias:true});
+        renderer.setSize(window.innerWidth,window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        controls = new OrbitControls(camera,renderer.domElement);
+        controls.addEventListener('change', renderer);
+
+        let loader = new GLTFLoader();
+        loader.load('forest_house.glb', function(gltf){
+          let model = gltf.scene.children[0]; // get the first child, which is the model
+          model.scale.set(1,1,1); // scale here
+          scene.add(gltf.scene);
+          animate();
+        });
+      }
+      function animate() {
+        renderer.render(scene,camera);
+        requestAnimationFrame(animate);
+      }
+      init();
+    </script>
+  </body>
 </html>
